--- a/node_app/www/generic.html
+++ b/node_app/www/generic.html
@@ -35,8 +35,30 @@
 					<script src="http://d3js.org/d3.v3.min.js"></script>
 					<script src="http://d3js.org/topojson.v1.min.js"></script>
 					<script src="js/datamaps/dist/datamaps.usa.min.js"></script>
-					<div id="container" style="position: float; width: 100%; height: 550px;"></div>
+					<form style = "position : float; float: left; width : 200px">
+						<label for="from">From : </label>
+						<input id = "from" type="date" name="from" onchange="dateChange()"/>
+						<br />
+						<br />
+						<label for="to">To : </label>
+						<input id = "to" type="date" name="to" onchange="dateChange()"/>
+					</form>
+					<div id="container" style="position: float; float: right; width: 80%; height: 550px;"></div>
 					<script>
+						function dateChange() {
+							var from_date = document.getElementById("from").value;
+							var to_date = document.getElementById("to").value;
+							if((from_date && to_date) != '') {
+								var json_url = '/flights_arc?from=' + from_date + '&to=' + to_date;
+								console.log(json_url);
+								d3.json(json_url, function(json_data) {
+									// Arcs coordinates can be specified explicitly with latitude/longtitude,
+									// or just the geographic center of the state/country.
+									map.arc(json_data);
+								});
+							}
+						}
+
 						var map = new Datamap({
 						  element: document.getElementById("container"),
 						  scope: 'usa',
@@ -53,11 +75,6 @@
 						    'CO': { fillKey: 'win' }
 						  }
 						});
-						d3.json('/flights_arc', function(json_data){
-							// Arcs coordinates can be specified explicitly with latitude/longtitude,
-							// or just the geographic center of the state/country.
-							map.arc(json_data);
-						})
 						/*
 						[{
 							_id : ''
@@ -69,27 +86,8 @@
 							//...
 						}]
 						*/
-					</script>
-					</div>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="flex">
-						<div class="copyright">
-							&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
-						</div>
-						<ul class="icons">
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-linkedin"><span class="label">linkedIn</span></a></li>
-							<li><a href="#" class="icon fa-pinterest-p"><span class="label">Pinterest</span></a></li>
-							<li><a href="#" class="icon fa-vimeo"><span class="label">Vimeo</span></a></li>
-						</ul>
-					</div>
-				</div>
-			</footer>
-
+				</script>
+		</div>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
