Updating index page

--- a/node_app/www/index.html
+++ b/node_app/www/index.html
@@ -1,11 +1,64 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Theory by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 <html>
-<head>
-<title>Title of the document</title>
-</head>
+	<head>
+		<title>Développement d'application Cloud</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body>
 
-<body>
-  This is the content of index.html
-</body>
+		<!-- Banner -->
+			<section id="banner">
+				<h1>Développement d'application Cloud</h1>
+				<p>App Project</p>
+			</section>
 
+		<!-- One -->
+			<section id="one" class="wrapper">
+				<div class="inner">
+					<div class="flex flex-3">
+						<article>
+							<header>
+								<h3>Utilisateur standard</h3>
+							</header>
+							<p>Fournir à un utilisateur standard un accès aux résultats des 4 requêtes proposées. La vue n’a pas forcément besoin de fournir la requête mais seulement une vision sur les données interrogées.</p>
+							<footer>
+								<a href="#" class="button special">More</a>
+							</footer>
+						</article>
+						<article>
+							<header>
+								<h3>Analyste/Décisionnaire</h3>
+							</header>
+							<p>Fournir à votre Data Analyst ou votre Business User une vue permettant de fournir les indicateurs proposés. L’interface devra permettre de paramétrer les requêtes avec des valeurs (soit à la main, soit par menu déroulant).</p>
+							<footer>
+								<a href="/analyst" class="button special">More</a>
+							</footer>
+						</article>
+						<article>
+							<header>
+								<h3>Administrateur</h3>
+							</header>
+							<p>L’administrateur de la base MongoDB doit pouvoir récupérer di érentes statistiques pour pouvoir faire évoluer le cluster en fonction de la charge.</p><br />
+							<footer>
+								<a href="#" class="button special">More</a>
+							</footer>
+						</article>
+					</div>
+				</div>
+			</section>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
