Standard user view. New database. Update Answer.md

--- a/node_app/www/index.html
+++ b/node_app/www/index.html
@@ -29,7 +29,7 @@
 							</header>
 							<p>Fournir à un utilisateur standard un accès aux résultats des 4 requêtes proposées. La vue n’a pas forcément besoin de fournir la requête mais seulement une vision sur les données interrogées.</p>
 							<footer>
-								<a href="#" class="button special">More</a>
+								<a href="/standard" class="button special">More</a>
 							</footer>
 						</article>
 						<article>
