Optimization of Analyst Interface

--- a/node_app/www/App_Analyste/analyst.html
+++ b/node_app/www/App_Analyste/analyst.html
@@ -101,8 +101,39 @@
           </div>
         </div>
       </div>
-      <div class="row" id = "delay-container">
-
+      <div class="row">
+        <div class="col-6">
+          <table class="table table-hover">
+            <thead>
+              <tr class="table-info">
+                <th scope="col">Company</th>
+                <th scope="col">Number of Flights</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Default</th>
+                <td>Column content</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="col-6">
+          <table class="table table-hover">
+            <thead>
+              <tr class="table-danger">
+                <th scope="col">Company</th>
+                <th scope="col">Number of Flights</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">Default</th>
+                <td>Column content</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
 
     </div>
