Displaying the 2 finals Table in Analyst View.

--- a/node_app/www/App_Analyste/analyst.html
+++ b/node_app/www/App_Analyste/analyst.html
@@ -107,14 +107,10 @@
             <thead>
               <tr class="table-info">
                 <th scope="col">Company</th>
-                <th scope="col">Number of Flights</th>
+                <th scope="col">Number of Departure Flights</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <th scope="row">Default</th>
-                <td>Column content</td>
-              </tr>
+            <tbody id="top10Dep">
             </tbody>
           </table>
         </div>
@@ -123,14 +119,10 @@
             <thead>
               <tr class="table-danger">
                 <th scope="col">Company</th>
-                <th scope="col">Number of Flights</th>
+                <th scope="col">Number of Arrival Flights</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <th scope="row">Default</th>
-                <td>Column content</td>
-              </tr>
+            <tbody id="top10Arr">
             </tbody>
           </table>
         </div>
