App-standard new progress bar

--- a/node_app/www/App_Standard/index.html
+++ b/node_app/www/App_Standard/index.html
@@ -29,8 +29,13 @@
           </nav>
           <a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
         </div>
+        <div class="progress" id="progress">
+          <div class="progress-bar bg-info" id="result-progress" role="progressbar" style="width: 0%" aria_valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
       </header>
       <div class="inner">
+
+
         <br />
         <header class="align-center">
           <h2>World Flights Map</h2>
