Navbar links created + Administrator interface.

--- a/node_app/www/index.html
+++ b/node_app/www/index.html
@@ -47,7 +47,7 @@
 							</header>
 							<p>L’administrateur de la base MongoDB doit pouvoir récupérer di érentes statistiques pour pouvoir faire évoluer le cluster en fonction de la charge.</p><br />
 							<footer>
-								<a href="#" class="button special">More</a>
+								<a href="/admin" class="button special">More</a>
 							</footer>
 						</article>
 					</div>
