--- a/node_app/www/App_Administrateur/index.html
+++ b/node_app/www/App_Administrateur/index.html
@@ -2,9 +2,53 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link rel="stylesheet" href="css/darkly/bootstrap.min.css">
+    <link rel="stylesheet" href="css/circle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="App_Analyste/css/style.css">
+    <title>Analyst</title>
   </head>
-  <body>
 
+  <body onload="onload()">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <a class="navbar-brand" href="/">Cloud App</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarColor01">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/standard">Standard</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/analyst">Analyste</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="container">
+      <div class="page-header" id="banner">
+        <div class="row">
+          <div class="col-lg-8 col-md-7 col-sm-6">
+            <h1>Administrator Interface</h1>
+            <p class="lead">Application Database Log : </p>
+          </div>
+        </div>
+        <div class="row" style="background : white; width:100%; height:400px; color:black">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
+    </div>
+
+    <!-- Script -->
+    <script src="js/jquery-3.2.1.min.js"></script> <!-- JQuery -->
+    <script src="js/Chart.min.js"></script> <!-- Chart -->
+    <script src="js/Chart.bundle.min.js"></script> <!-- Chart -->
+		<script type="text/javascript" src="App_Analyste/js/script2.js"></script> <!-- Personal script -->
   </body>
 </html>
