--- a/node_app/www/App_Analyste/analyst.html
+++ b/node_app/www/App_Analyste/analyst.html
@@ -22,13 +22,10 @@
             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="/standard">Standard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="/admin">Administrateur</a>
           </li>
         </ul>
       </div>
