--- a/node_app/www/App_Standard/index.html
+++ b/node_app/www/App_Standard/index.html
@@ -24,8 +24,8 @@
           <a href="index.html" class="logo">Standard Interface</a>
           <nav id="nav">
             <a href="index.html">Home</a>
-            <a href="generic.html">Generic</a>
-            <a href="elements.html">Elements</a>
+            <a href="/analyst">Analyste</a>
+            <a href="/admin">Administrateur</a>
           </nav>
           <a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
         </div>
