--- a/node_app/www/App_Standard/index.html
+++ b/node_app/www/App_Standard/index.html
@@ -30,7 +30,7 @@
           <a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
         </div>
         <div class="progress" id="progress">
-          <div class="progress-bar bg-info" id="result-progress" role="progressbar" style="width: 5%" aria_valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+          <div class="progress-bar-striped active bg-danger" id="result-progress" role="progressbar" style="width: 5%" aria_valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
       </header>
       <div class="inner">
