--- a/node_app/www/App_Administrateur/index.html
+++ b/node_app/www/App_Administrateur/index.html
@@ -40,6 +40,7 @@
           </div>
         </div>
         <div class="row" id="user_console" style="background : white; width:100%; height:400px; color:black; overflow:auto">
+          Nothing to show...
         </div>
       </div>
     </div>
