--- a/node_app/www/App_Administrateur/index.html
+++ b/node_app/www/App_Administrateur/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/circle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="App_Analyste/css/style.css">
-    <title>Analyst</title>
+    <title>Administrateur</title>
   </head>
 
   <body onload="onload()">
@@ -39,8 +39,43 @@
             <p class="lead">Application Database Log : </p>
           </div>
         </div>
-        <div class="row" id="user_console" style="background : white; width:100%; height:400px; color:black; overflow:auto">
+        <div class="row" id="user_console" style="background : white; height:250px; color:black; overflow:auto">
           Nothing to show...
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4">
+          <table class="table table-hover">
+            <thead>
+              <tr class="table-success">
+                <th scope="col">Standard Queries</th>
+              </tr>
+            </thead>
+            <tbody id="Standard">
+            </tbody>
+          </table>
+        </div>
+        <div class="col-4">
+          <table class="table table-hover">
+            <thead>
+              <tr class="table-info">
+                <th scope="col">Analyst Queries</th>
+              </tr>
+            </thead>
+            <tbody id="Analyst">
+            </tbody>
+          </table>
+        </div>
+        <div class="col-4">
+          <table class="table table-hover">
+            <thead>
+              <tr class="table-danger">
+                <th scope="col">Administrator Queries</th>
+              </tr>
+            </thead>
+            <tbody id="Administrator">
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
