Publishing V1 Admin Interface.

--- a/node_app/www/App_Administrateur/index.html
+++ b/node_app/www/App_Administrateur/index.html
@@ -49,6 +49,7 @@
             <thead>
               <tr class="table-success">
                 <th scope="col">Standard Queries</th>
+                <th>Time Avg</th>
               </tr>
             </thead>
             <tbody id="Standard">
@@ -60,6 +61,7 @@
             <thead>
               <tr class="table-info">
                 <th scope="col">Analyst Queries</th>
+                <th>Time Avg</th>
               </tr>
             </thead>
             <tbody id="Analyst">
@@ -71,6 +73,7 @@
             <thead>
               <tr class="table-danger">
                 <th scope="col">Administrator Queries</th>
+                <th>Time Avg</th>
               </tr>
             </thead>
             <tbody id="Administrator">
